# AoC-2025

./: CMakeLists.txt
Dec1/: CMakeLists.txt  Dec1.cpp
Dec1/src/: Data.h  Dec1.cpp
Dec10/: Dec10-pt2.jl  Dec10.jl  InitData.jl
Dec11/: Dec11.jl
Dec12/: Dec12.jl
Dec2/: CMakeLists.txt  Dec2.cpp
Dec2/src/: Dec2.cpp
Dec3/: CMakeLists.txt  DATA.h  Dec3.cpp
Dec3/src/: Dec3.cpp
Dec4/: CMakeLists.txt  Data.h
Dec4/src/: Dec4.cpp
Dec5/: CMakeLists.txt  Data.h  Dec5.cpp
Dec5/src/: Dec5.cpp
Dec6/: CMakeLists.txt
Dec6/src/: Data.h  Dec6.cpp
Dec7/: Dec7.jl
Dec8/: Dec8.jl
Dec9/: Dec9.jl
